src/test/resources/public/input/typechecking/fail/access/fail02.jova
class Test{
  private int dontTouchMeEither(){
    return 0;
  }
}

class Main {

  public int main() {
    Test test;
    int ret;
    test = new Test;
    ret = test.dontTouchMeEither();
    return 0;
  }

}